tx details page overlapping divs fix (#1043)

--- a/src/components/TransactionDetails/TransactionDetails.less
+++ b/src/components/TransactionDetails/TransactionDetails.less
@@ -1,7 +1,6 @@
 @import '../../views/resources/css/variables.less';
 
 .transaction-details-main-container {
-    max-height: 5rem;
     margin-left: 0.5rem;
     margin-right: 0.2rem;
 }
